--- a/views/_partial/_problem/problem.ejs
+++ b/views/_partial/_problem/problem.ejs
@@ -91,7 +91,13 @@
 			<% } %>
 		<% } %>
 		</fieldset>
-		<button type="submit" name="submit" id="submit" class="pure-button pure-input-1 pure-button-primary"><%= __('Submit') %></button>
+		<div class="pure-g">
+			<div class="pure-u-1-4">
+			</div>
+			<div class="pure-u-3-4">
+			<button type="submit" name="submit" id="submit" class="pure-button pure-input-1-4 pure-button-primary"><%= __('Submit') %></button>
+			</div>
+		</div>
 	</form>
 
 	<script>
