--- a/views/_partial/_widget/recent_problem.ejs
+++ b/views/_partial/_widget/recent_problem.ejs
@@ -1,17 +1,27 @@
 <h2><%= __('Recent Update') %></h2>
 <div class="pure-g">
 	<div class="pure-u-1-1">
-		<table class="pure-table">
+		<table class="pure-table pure-table-bordered" sytle="width: 100%">
+			<thead>
+				<tr>
+					<th></th>
+					<th></th>
+				</tr>
+			</thead>
 			<tbody>
 				<% for (var i in recent_problems) { %>
 					<tr <%- i%2 == 0 ? "" : 'class="pure-table-odd"' %> >
 						<td>
 							<%- recent_problems[i].pid %>
 						</td>
-						<td>
+						<td >
 							<a href="<%= site.url_for('problem/0/' + recent_problems[i].pid) %>">
 								<%- recent_problems[i].ttl %>
-							</a>
+							</a>&mdash;
+							<%
+								var domain_name = ['C', 'PP', 'DSA'];
+							%>
+							<%- domain_name[recent_problems[i].did] %> / <%- recent_problems[i].level_name %>
 						</td>
 					</tr>
 					<% } %>
