--- a/views/_partial/archive.ejs
+++ b/views/_partial/archive.ejs
@@ -4,15 +4,17 @@
 </div>
 
 <div class="pure-g">
-	<div class="pure-u-1 pure-u-lg-14-24">
+	<div class="pure-u-1">
 		<div class="content">
 			<%- archive_content %>
 		</div>
 	</div>
-	<div class="pure-u-1 pure-u-lg-1-24">
+	<div class="pure-u-1">
 	</div>
-	<div class="pure-u-1 pure-u-lg-6-24">
-		<%- include('_widget/recent_problem', {recent_problems: recent_problems}) %>
-		<%- include('_widget/recent_comment') %>
+	<div class="pure-u-1">
+		<div class="content">
+			<%- include('_widget/recent_problem', {recent_problems: recent_problems}) %>
+			<%- include('_widget/recent_comment') %>
+		</div>
 	</div>
 </div>
