modify page description

--- a/views/_partial/_user/register.ejs
+++ b/views/_partial/_user/register.ejs
@@ -34,14 +34,14 @@
 				<fieldset class="pure-group">
 						<label for="lgn"><%= __('Email') %></label>
 						<input class="pure-input-1" name="email" id="email" placeholder="" />
-						<label for="lgn"><%= __('Register Key') %></label>
+						<label for="lgn"><%= __('Registration Key') %></label>
 						<input class="pure-input-1" name="code" id="code" placeholder="" />
 				</fieldset>
 
 		    <button type="submit" name="submit" id="submit" class="pure-button pure-input-1 pure-button-primary"><%= __('Submit') %></button>
 
 				<div class="pure-controls">
-					<a href="https://www.facebook.com/ntucsiec2014xiaominglin/" class="comment"><%= __('You donot have register key?') %></a>
+					<a href="https://www.facebook.com/ntucsiec2014xiaominglin/" class="comment"><%= __('How do I get a registration key ?') %></a>
 				</div>
 		</form>
 	</div>
