rename signup page

--- a/views/_partial/_user/signup.ejs
+++ b/views/_partial/_user/signup.ejs
@@ -1,5 +1,5 @@
 <div class="header">
-	<h1 class='article-title'>Register</h1>
+	<h1 class='article-title'>Sign Up</h1>
 	<h2>If you have any login problem, please contact TA.</h2>
 </div>
 <% if (sysmsg && sysmsg.length > 0) { %>
