--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,8 +9,8 @@
               <%- include('_partial/_user/login') %>
             <% } else if (layout == 'edit') { %>
               <%- include('_partial/_user/edit') %>
-            <% } else if (layout == 'register') { %>
-              <%- include('_partial/_user/register') %> 
+            <% } else if (layout == 'signup') { %>
+              <%- include('_partial/_user/signup') %> 
             <% } else if (layout == 'user') { %>
               <%- include('_partial/_user/user') %>
             <% } else if (layout == 'score') { %>
