--- a/views/_partial/_problem/domain.ejs
+++ b/views/_partial/_problem/domain.ejs
@@ -30,6 +30,12 @@
                 <h1 class="text-box-head"><a href="<%= site.url_for('problems/domain/1') %>">Parallel Programming</a></h1>
             </div>
         </div>
+        <div class="custom-border">
+            <div>
+                <h1 class="text-box-head"><a href="<%= site.url_for('problems/domain/2') %>">Data Structures and Algorithms</a></h1>
+            </div>
+        </div>
+
 	</div>
 </div>
 
