multi-language version

--- a/views/_partial/_contest/contest.ejs
+++ b/views/_partial/_contest/contest.ejs
@@ -15,7 +15,7 @@
 	}
 %>
 <div class="header">
-	<h1 class='article-title'>Contest</h1>
+	<h1 class='article-title'><%= __('Contest') %></h1>
     <h2><%- contest_config.ttl %></h2>
 </div>
 <div class="content">
