--- a/views/_partial/_problem/problem.ejs
+++ b/views/_partial/_problem/problem.ejs
@@ -11,7 +11,7 @@
 
 <div class="header">
 	<h1 class='article-title'><%- pid + ". " + ttl %></h1>
-    <h2>I'm a slow walker, but I never walk backwards. </h2>
+    <h2><%= __("I'm a slow walker, but I never walk backwards.") %></h2>
 </div>
 <div class="content">
 
