--- a/views/_partial/head.ejs
+++ b/views/_partial/head.ejs
@@ -106,7 +106,7 @@
 								<a class="pure-menu-link" href="<%= site.url_for('i18n/zhtw') %>"><i class="fa fa-globe"></i> 中文</a>
 							</li>
 							<li class="pure-menu-item">
-								<a class="pure-menu-link" href="<%= site.url_for('i18n/en') %>"><i class="fa fa-globe"></i> en</a>
+								<a class="pure-menu-link" href="<%= site.url_for('i18n/en') %>"><i class="fa fa-globe"></i> English</a>
 							</li>
 						</ul>
 					</div>
