--- a/views/_partial/_user/score.ejs
+++ b/views/_partial/_user/score.ejs
@@ -1,5 +1,5 @@
 <div class="header">
-	<h1 class='article-title'>Score</h1>
+	<h1 class='article-title'><%= __('Score') %></h1>
 	<h2><%- userinfo.info.lgn  %></h2>
 </div>
 <div class="content">
@@ -13,53 +13,24 @@
 		score_statistic.score[i].sum /= score_statistic.exams_cnt;
 		score_statistic.score[i].sum = Math.ceil(score_statistic.score[i].sum);
 	}
-	for (var i = 0; i <= 100; i++) {
+	var gap = 10;
+	for (var i = 0; i < 100; i += gap) {
 		var arr = score_statistic.score.filter(function(e) {
-			return e["sum"] == i;
+			return e["sum"] >= i && e["sum"] < i+gap;
 		});
 		if (arr.length == 0) {
-			score_statistic.score.push({sum: i, count: 0});
+			score_statistic.score.push({sum: '[' + i + ', ' + (i+gap) + ')', count: 0});
+		} else {
+			score_statistic.score.push({sum: '[' + i + ', ' + (i+gap) + ')', count: arr.length});
 		}
 	}
-	score_statistic.score.sort(function(a, b) {
-    	var keyA = a["sum"],
-        	keyB = b["sum"];
-	    if(keyA < keyB) return -1;
-	    if(keyA > keyB) return 1;
-	    return 0;
-	});
 %>
 
-<h2>Score Distribution</h2>
-
-<div id="line-progress"></div>
-
+<div id="bar-progress"></div>
+<h3 style="text-align: center"><%= __('Score Distribution') %></h3>
 <script>
 	Morris.Bar({
-		element: 'line-progress',
-		data:
-			<%- JSON.stringify(score_statistic.score) %>
-		,
-		xkey: 'sum',
-  		ykeys: ['count'],
-		labels: ['#users'],
-		parseTime: false
-	});
-</script>
-
-<h2>Score Cumulative Distribution</h2>
-
-<div id="line-progress2"></div>
-<% 
-	var sum = 0;
-	for (var i in score_statistic.score) {
-		sum += score_statistic.score[i].count;
-		score_statistic.score[i].count = sum; 
-	}
-%>
-<script>
-	Morris.Line({
-		element: 'line-progress2',
+		element: 'bar-progress',
 		data:
 			<%- JSON.stringify(score_statistic.score) %>
 		,
@@ -67,11 +38,11 @@
   		ykeys: ['count'],
 		labels: ['#users'],
 		parseTime: false,
-		pointSize: 1
+		yLabelFormat: function(y){return y != Math.round(y)?'':y;}
 	});
 </script>
 
-<h2>Score Detail</h2>
+<h2><%= __('Score Table') %></h2>
 <%
 	var thead = score.thead;
 	var tbody = score.tbody;
