Fixed countdown & problem dependency error

--- a/views/_partial/_problem/problem-domain.ejs
+++ b/views/_partial/_problem/problem-domain.ejs
@@ -148,7 +148,6 @@
 			}).done(function(probs_list) {
 		  		var obj = $(elem);
 		  		$.jhunt.probs_list = probs_list;
-		  		console.log(probs_list);
 		  		render(elem, options);
 		  	}); 
     	}
@@ -175,7 +174,8 @@
 				var item = probs_list.plist[i];
 					text += '<div class="problem-item">';
 				text += '<div class="pure-u-1-12"><h2>';
-				if ((item.pid in solve_dep && item.pid in score && score[item.pid] != 7 && solve_dep[item.pid] == prob_dep[item.pid]) 
+				if ((item.pid in solve_dep && solve_dep[item.pid] == prob_dep[item.pid] 
+					&& (!(item.pid in score) || (item.pid in score && score[item.pid] != 7))) 
 					|| (!(item.pid in prob_dep) && (!(item.pid in score) || item.pid in score && score[item.pid] != 7))) {
 					text += '<i class="fa fa-thumbs-o-up" aria-hidden="true"></i>';
 				}
