--- a/views/_partial/_contest/contests.ejs
+++ b/views/_partial/_contest/contests.ejs
@@ -6,6 +6,19 @@
 <% if (contest_list == null || contest_list.length == 0) { %>
 	<div class="sysmsg">NO AVAILABLE CONTEST</div>	
 <% } else { %>
+<script>
+	function calcOffset() {
+		var xmlhttp = new XMLHttpRequest();
+		xmlhttp.open("GET", "<%= site.url_for('time') %>", false);
+		xmlhttp.send();
+
+		var dateStr = xmlhttp.getResponseHeader('Date');
+		var serverTimeMillisGMT = Date.parse(new Date(Date.parse(dateStr)).toUTCString());
+		var localMillisUTC = Date.parse(new Date().toUTCString());
+
+		return offset = serverTimeMillisGMT -  localMillisUTC;
+	}
+</script>
 <div class="pure-g">
 	<div class="pure-u-1-1">
 		<table class="pure-table pure-table-bordered" style='width: 100%'>
@@ -34,7 +47,7 @@
 						contest_status = 'running';
 					}
 					if (i % 2) {
-						contest_status += ' pure-table-odd';
+//						contest_status += ' pure-table-odd';
 					}
 				%>
 				<tr class="<%- contest_status %>">
@@ -62,7 +75,7 @@
 						<div id="contest-clock<%- i%>" class='contest-clock'></div>
 						<script text='javascript'>
 							var d = new Date('<%- unitConvert('date', new Date(contest_list[i].ts1)) %>');
-							d.setTime(d.getTime() - get_clock_offset());
+							d.setTime(d.getTime() - calcOffset());
 							var ddstr = d.getFullYear() + "/" + (d.getMonth()+1) + "/" + d.getDate()  + " " + d.getHours() + ":" + d.getMinutes() + ":" + d.getSeconds();
 							$('#contest-clock<%- i%>').countdown(ddstr, function(event) {
 									var totalHours = event.offset.totalDays * 24 + event.offset.hours;
